# FoundryTools

./: .bumpversion.toml  .gitignore  .mypy.ini  .pre-commit-config.yaml  .ruff.toml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: github_release.yml  mypy.yml  pylint.yml  pypi_deploy.yml  python-publish.yml  ruff.yml  unit_tests.yml
api_docs/: conf.py  foundrytools.app.rst  foundrytools.core.rst  foundrytools.core.tables.rst  foundrytools.lib.rst  index.rst
docs/: conf.py  font.md  font_class.md  foundrytools.app.rst  foundrytools.rst  foundrytools.utils.rst  requirements.txt
docs/source/: app.rst  app_package.rst  conf.py  core_package.rst  font.rst  font_finder.rst  foundrytools.app.rst  foundrytools.cli_tools.rst  foundrytools.core.rst  foundrytools.lib.font_finder.rst  foundrytools.rst  foundrytools.tables.rst  foundrytools.utils.rst  index.rst  modules.rst  tables.rst
foundrytools/: __init__.py  beziers_tools.py  constants.py  font.py  font_finder.py  otf_builder.py  qu2cu.py  skia_tools.py  t2_charstrings.py  ttf_builder.py
foundrytools/app/: __init__.py  fix_empty_notdef.py  fix_italic_angle.py  fix_monospace.py  otf_autohint.py  otf_check_outlines.py  otf_dehint.py  otf_desubroutinize.py  otf_recalc_stems.py  otf_recalc_zones.py  otf_subroutinize.py  remove_glyphs.py  remove_unused_glyphs.py  rename_glyph.py  rename_glyphs.py  set_production_names.py  sort_glyphs.py  ttf_autohint.py  var2static.py
foundrytools/cli_tools/: font_finder.py
foundrytools/core/: font.py  font_finder.py
foundrytools/core/tables/: __init__.py  cff_.py  cmap.py  default.py  fvar.py  gdef.py  glyf.py  gsub.py  head.py  hhea.py  hmtx.py  kern.py  name.py  os_2.py  post.py
foundrytools/data/: README-GlyphsInfo.md  README-standardnam.md  names_to_unicodes.json
foundrytools/lib/: font_finder.py  otf_builder.py  pathops.py  qu2cu.py  unicode.py
foundrytools/tables/: __init__.py  cff_.py  cmap.py  default.py  gdef.py  glyf.py  gsub.py  head.py  hhea.py  hmtx.py  kern.py  name.py  os_2.py  post.py
foundrytools/utils/: misc.py  path_tools.py  string_tools.py  unicode_tools.py
src/foundrytools/: __init__.py  constants.py
src/foundrytools/app/: fix_empty_notdef.py  fix_italic_angle.py  fix_monospace.py  otf_autohint.py  otf_check_outlines.py  otf_dehint.py  otf_recalc_stems.py  otf_recalc_zones.py  ttf_autohint.py  ttf_dehint.py  var2static.py
src/foundrytools/core/: __init__.py  font.py
src/foundrytools/core/tables/: __init__.py  cff_.py  cmap.py  default.py  fvar.py  gdef.py  glyf.py  gsub.py  head.py  hhea.py  hmtx.py  kern.py  name.py  os_2.py  post.py
src/foundrytools/data/: README-GlyphsInfo.md  README-standardnam.md
src/foundrytools/lib/: __init__.py  font_finder.py  otf_builder.py  pathops.py  qu2cu.py  ttf_builder.py  unicode.py
src/foundrytools/utils/: __init__.py  bits_tools.py  misc.py  path_tools.py
tests/: test_stump.py
